--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
+.gradle
+local.properties
+.idea
+*.iml
+*.so
+.DS_Store
+build
+captures
+version.properties
+env
+node_modules
+reports
+.cxx
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# IDE-generated dir
+out/
