--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ maven_publish_plugin_version=0.15.1
 org.gradle.jvmargs=-Xmx2048m
 
 GROUP=dev.zacsweers
-VERSION_NAME=1.0.0
+VERSION_NAME=1.1.0-SNAPSHOT
 POM_DESCRIPTION=A simple Gradle plugin that auto-patches the memory leak in Kotlin Gradle Plugin 1.5.0.
 POM_URL=https://github.com/ZacSweers/kgp-150-leak-patcher/
 POM_SCM_URL=https://github.com/ZacSweers/kgp-150-leak-patcher/
